--- a/css/pc-ts.css
+++ b/css/pc-ts.css
@@ -239,7 +239,7 @@
 .text {
     width: 700px;
     height: 552px;
-    background: url(../images/content-logo.png);
+    background: url(../images/content-logo.jpg);
     background-repeat: no-repeat;
     background-position-x: right;
 }
